syntax = "proto3";

package auth;

option go_package = "./services/api_gateway/pkg/blogsandposts/pb";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message CreateBlogRequest {
  string id = 1;
  string title = 2;
  string content = 3;
  string authorName = 4;
  string authorId = 5;
  bool published = 6;
  repeated string Tags = 7;
  Ownership ownership = 8;
  bool canEdit = 9;
  string folderPath = 10;
  google.protobuf.Timestamp createTime = 11;
  google.protobuf.Timestamp updateTime = 12;

  enum Ownership {
    THE_USER = 0;
    THE_MONKEYS = 1;
    THE_PARTNER = 2;
  }
  
}

message CreateBlogResponse {
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}

message GetBlogsRequest{}

message GetBlogsResponse {
  string id = 1;
  string title = 2;
  string authorName = 3;
  string authorId = 4;
  string content = 5;
  google.protobuf.Timestamp createTime = 6;
}

message GetBlogByIdRequest {
  string Id = 1;
}

message GetBlogByIdResponse {
  string Id = 1;
  string title = 2;
  string authorName = 3;
  string authorId = 4;
  string content = 5;
  google.protobuf.Timestamp createTime = 6;
  repeated string Tags = 7;
}

message EditBlogRequest {
  string Id = 1;
  string title = 2;
  string content = 3;
  repeated string Tags = 5;
  bool isPartial = 4;
}

message EditBlogResponse {
  int64 status = 1;
  string error = 2;
  string id = 3;
}

service BlogsAndPostService {
    rpc CreateABlog(CreateBlogRequest) returns (CreateBlogResponse) {};
    rpc Get100Blogs(google.protobuf.Empty) returns (stream GetBlogsResponse) {};
    rpc GetBlogById(GetBlogByIdRequest) returns (GetBlogByIdResponse){};
    rpc EditBlogById(EditBlogRequest) returns (EditBlogResponse){};
}